--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,7 +5,7 @@
 
 @font-face {
 	font-family: "NeueMachina-Regular";
-	src: url("/assets/font/NeueMachina-Regular.otf");
+	src: url("./assets/font/NeueMachina-Regular.otf");
 }
 
 html {
