--- a/assets/css/repository.css
+++ b/assets/css/repository.css
@@ -14,7 +14,7 @@
 	display: block;
 	width: 2rem;
 	height: 2rem;
-	background-image: url("./assets/icons/github.svg");
+	background-image: url("../icons/github.svg");
 	background-repeat: round;
 }
 
